# design-patterns

./: Makefile  README.md  pyproject.toml
.github/workflows/: mypy.yml
patterns/architectural/: broker.py  client_server.py  reverse_proxy.py
patterns/behavioral/: command.py  cor.py  mediator.py  observer.py  retry.py  state.py  template_method.py
patterns/creational/: __init__.py  builder.py  connections.py  db.py  di.py  di_example.py  factories.py  jsonable.py  monostate.py  multiton.py  pool.py  products.py  prototype.py  singleton.py
patterns/infrastructural/: broker.py  client_server.py  event_sourcing.py  reverse_proxy.py  transactional_outbox.py
patterns/microservices/: __init__.py  broker.py
patterns/structural/: adapter.py  bridge.py  composite.py  db.py  decorator.py  delegate.py  dummy.py  facade.py  flyweight.py  locator.py  mixin.py  proxy.py
src/approaches/: ddd.py  vertical_slice.py
src/architectural/: README.md
src/behavioral/: generator.py  interpreter.py  iterator.py  memento.py  null.py  servant.py  session.py  strategy.py  template_method.py  visitor.py
src/concurrency/: event_loop.py
src/creational/: builder.py  db.py  di.py  di_example.py  factories.py  monostate.py  multiton.py  pool.py  products.py  prototype.py  singleton.py
src/enterprise/: README.md  active_record.py  aggregate.py  dao.py  data_mapper.py  domain_model.py  dto.py  identity_map.py  repository.py  source.py  (+3 more)
tests/: conftest.py  test_behavioral.py  test_concurrency.py  test_creational.py  test_enterprise.py  test_infrastructural.py  test_structural.py
(+29 files in other folders)
